# fcfMath

./: .gitmodules  BaseIterator.hpp  BasicIterator.hpp  CMakeLists.txt  FunctionRegistrator.hpp  README.md  TypeIndex.hpp  functions.hpp  ifunctions.hpp  include.hpp  macro.hpp  math.hpp  randomDevice.hpp  type.hpp
Details/: FunctionSignature.hpp
Perceptron/: Layer.hpp  LayerOptions.hpp  LayerWeights.hpp  Layers.hpp  Weights.hpp
test/tests/: CMakeLists.txt  impl.cpp  macro.hpp  main.cpp
test/tests/base/: declareFunction.cpp  declareFunctionImpl.cpp  typeInfo.cpp
test/tests/containers/: layer.cpp
test/tests/functions/: fill.cpp  getter.cpp  random.cpp
